--- a/src/components/docs-callout/docs-callout.component.html
+++ b/src/components/docs-callout/docs-callout.component.html
@@ -13,5 +13,5 @@
   <ng-content></ng-content>
 
   <br>
-  For more information please visit our official <a href="{{href}}" target="_blank">documentation of CoreUI Components Library for Angular.</a>
+  Para mas informacion visitar sitio oficial <a href="{{href}}" target="_blank">documentation of CoreUI Components Library for Angular.</a>
 </ng-template>
