Botón para exportar a Excel funcional
Agregado el boton para exportar los reportes a excel, se agregaron las dependencias de los modulos necesarios para la funcionalidad. Instalar dependencias para que no generen errores.

--- a/src/app/views/reportes/ej/ej.component.html
+++ b/src/app/views/reportes/ej/ej.component.html
@@ -1,4 +1,7 @@
-<h3 align="center">EJEMPLO DE REPORTE</h3> <button class="btn-secondary">Exportar</button>
+<h3 align="center">EJEMPLO DE REPORTE</h3>
+
+    <input type="button" value="Exportar a Excel" (click)="exportExcel()"/>
+
 <hr>
 
 <div class="container">
