Agregado exportacion excel y filtro

--- a/src/app/views/reportes/reportesEpidemiologicos/tipeo/tipeo.component.html
+++ b/src/app/views/reportes/reportesEpidemiologicos/tipeo/tipeo.component.html
@@ -1,8 +1,12 @@
-<h2 align="center">Tipos de sangre</h2>
+<h2>ESTADISTICAS DE LOS TIPOS DE SANGRE POR ZONA GEOGRAFICA</h2>
+<button  class="btn btn-primary" onclick="Exporter.export(tabla, 'reporte.xls', 'Reporte')">Exportar a Excel</button>
+<button style="margin-left: 10px" class="btn btn-primary" onclick="Exporter.export(tabla, 'reporte.csv', 'Reporte')">Exportar a CSV</button>
+<hr>
 <div class="container">
-  <table class="table table-hover table-bordered">
-    <thead class="table-dark">
-      <tr>
+  <input type="text" class="form-control pull-right" style="width:50%" id="search" placeholder="Buscar...">
+  <table id="tabla" class="table table-hover table-bordered">
+    <thead class="table-dark cab">
+      <tr class="cab">
         <td>Pais</td>
         <td>Departamento</td>
         <td>Municipio</td>
