--- a/src/app/views/reportes/reportesGenerales/reportesGenerales.component.html
+++ b/src/app/views/reportes/reportesGenerales/reportesGenerales.component.html
@@ -1,4 +1,4 @@
-<h3 align="center">REPORTES GENERALES</h3>
+<h2>REPORTES GENERALES</h2>
 <button  class="btn btn-primary" onclick="Exporter.export(tabla, 'reporte.xls', 'Reporte')">Exportar a Excel</button>
 <button style="margin-left: 10px" class="btn btn-primary" onclick="Exporter.export(tabla, 'reporte.csv', 'Reporte')">Exportar a CSV</button>
 <hr>
