--- a/src/app/views/reportes/reportesEpidemiologicos/trigliceridos/trigliceridos.component.html
+++ b/src/app/views/reportes/reportesEpidemiologicos/trigliceridos/trigliceridos.component.html
@@ -1,8 +1,12 @@
-<h2 align="center">Trigliceridos altos</h2>
+<h2>ESTADISTICAS DE LA CANTIDAD DE PERSONAS CON TRIGLICERIDOS ALTOS Y LOS EXAMENES REALIZADOS</h2>
+<button  class="btn btn-primary" onclick="Exporter.export(tabla, 'reporte.xls', 'Reporte')">Exportar a Excel</button>
+<button style="margin-left: 10px" class="btn btn-primary" onclick="Exporter.export(tabla, 'reporte.csv', 'Reporte')">Exportar a CSV</button>
+<hr>
 <div class="container">
-  <table class="table table-dark table-hover">
-    <thead>
-      <tr>
+  <input type="text" class="form-control pull-right" style="width:50%" id="search" placeholder="Buscar...">
+  <table id="tabla" class="table table-dark table-hover">
+    <thead class="cab table-dark">
+      <tr class="cab">
         <td>Pais</td>
         <td>Departamento</td>
         <td>Municipio</td>
