--- a/src/app/views/reportes/reportesEstadisticos/tipos-de-examenes/tipos-de-examenes.component.html
+++ b/src/app/views/reportes/reportesEstadisticos/tipos-de-examenes/tipos-de-examenes.component.html
@@ -1,1 +1,22 @@
-<p>tipos-de-examenes works!</p>
+<h2>ESTADISTICA DE LOS TIPOS DE EXAMENES REALIZADOS EN LOS LABORATORIOS</h2>
+<button  class="btn btn-primary" onclick="Exporter.export(tabla, 'reporte.xls', 'Reporte')">Exportar a Excel</button>
+<button style="margin-left: 10px" class="btn btn-primary" onclick="Exporter.export(tabla, 'reporte.csv', 'Reporte')">Exportar a CSV</button>
+<hr>
+<div class="container">
+  <input type="text" class="form-control pull-right" style="width:50%" id="search" placeholder="Buscar...">
+  <table id="tabla" class="table table-hover table-bordered">
+    <thead class="table-dark cab">
+      <tr class="cab">
+        <td>Tipo de examen</td>
+        <td>Cantidad</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let tipo of datos">
+        <td>{{tipo.nombre}}</td>
+        <td>{{tipo.cantidad}}</td>
+
+      </tr>
+    </tbody>
+  </table>
+</div>
