--- a/src/app/views/pacientes/detallePaciente/detallePaciente.component.html
+++ b/src/app/views/pacientes/detallePaciente/detallePaciente.component.html
@@ -1,5 +1,5 @@
 <h2>Este es el detalle del paciente ID:{{idp}} </h2>
-{{paciente}}
+{{paciente|json}}
 
 <ng-container *ngFor="let pac of paciente">
 
