continuacion crud pais

--- a/src/app/views/catalogos/componentes/pais-form-update/pais-form-update.component.html
+++ b/src/app/views/catalogos/componentes/pais-form-update/pais-form-update.component.html
@@ -24,12 +24,10 @@
                     <input type="text" class="form-control" [(ngModel)]="pais.idIso2" name="idIso2" />
                 </div>
             </div>
-
-            <div class="row form-group">
-                <div class="col-sm-6">
-                    <ng-template>
-                        <button (click)="update()" class="btn btn-primary">Actualizar</button>
-                    </ng-template>
+            <br>
+            <div class="row form-group text-center">
+                <div class="col">
+                    <button (click)="update()" class="btn btn-primary">Actualizar</button>
                 </div>
             </div>
         </form>
