--- a/src/app/views/catalogos/pais/pais.component.html
+++ b/src/app/views/catalogos/pais/pais.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="col d-flex flex-row-reverse">
                 <div class="form-group">
-                    <input type="text" class="form-control" aria-describedby="emailHelp" name="filterPais" [(ngModel)]="filterPais" placeholder="Search...">
+                    <input type="text" class="form-control" aria-describedby="emailHelp" name="filterPais" [(ngModel)]="filterPais" placeholder="Buscar por nombre...">
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
             <td>{{item.nomPais}}</td>
             <td>{{item.idIso2}}</td>
             <td>
-              <button type="button" class="btn btn-primary">Editar</button>
+              <button type="button" [routerLink]="['/catalogos/paises/update', item.idPais]" class="btn btn-primary">Editar</button>
             </td>
             <td>
               <button type="button"  class="btn btn-danger">Eliminar</button>
