--- a/src/app/views/catalogos/componentes/pais-form/pais-form.component.html
+++ b/src/app/views/catalogos/componentes/pais-form/pais-form.component.html
@@ -25,8 +25,8 @@
                 </div>
             </div>
 
-            <div class="row form-group">
-                <div class="col-sm-6">
+            <div class="row form-group text-center">
+                <div class="col">
                     <button (click)="create()" class="btn btn-primary">Crear</button>
                 </div>
             </div>
